# lang-pipe

./: .gitignore  LICENSE  Makefile  main.py  pyproject.toml
src/langpipe/: main.py
